<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="hello_world">Hello world!</string>

    <!-- App name -->
    <string name="app_name">MyStudySchedule</string>



    <!-- Home Menu -->
    <string name="horary">Horario</string>
    <string name="subjects">Asignaturas</string>
    <string name="Tasks">Tareas</string>
    <string name="evaluation">Evaluación</string>


    <!-- Strings title_activity -->
    <string name="title_activity_ajustes">Creditos</string>
    <string name="title_activity_horario">Horario</string>
    <string name="title_activity_asignaturas">Asignaturas</string>
    <string name="title_activity_tareas">Tareas</string>
    <string name="title_activity_evaluacion">Evaluacion</string>
    <string name="title_activity_detalle_asignatura">DetalleAsignatura</string>
    <string name="title_activity_nueva_asignatura">NuevaAsignatura</string>



    <!-- Stings TextViews  -->
    <string name="TvDone">Hecha</string>
    <string name="TvAsignatura">Asignatura</string>
    <string name="TvProfesor">Profesor</string>
    <string name="TvHorario">Horario Asignatura</string>
    <string name="TvColor">Color</string>

    <string name="TvNuevaTarea">Tarea</string>
    <string name="TvFechaTarea">Fecha Entrega</string>
    <string name="TvPrioridadTarea">Prioridad</string>
    <string name="TvDesTarea">Descripción</string>

    <string name="TvTeam">Equipo</string>

    <string name="TvMember01">Marcel Barros Aparici</string>
    <string name="TvMember02">Rubén Ruiz Herrera</string>

    <string name="TvMemberJob01">Desarrollador</string>





    <!-- Stings Botones  -->
    <string name="BtGuardar">Guardar</string>
    <string name="BtNuevaAsignatura">Nueva Asignatura</string>



    <!-- Settings -->
    <string name="action_settings">Settings</string>
    <string name="title_activity_nueva_tarea">NuevaTarea</string>
    <string name="title_activity_detalle_tareas">detalle_tareas</string>


    <!-- Messages -->
    <string name="no_subjects_yet">No hay asignaturas disponibles</string>
    <string name="in_development">En desarrollo</string>
    <string name="under">Actualmente el equipo de MyStudySchedule está trabajando en el desarrollo de esta función.</string>
    <string name="deleteSubject">Seguro que quieres borrar esta asignatura? (Todas las tareas que estén asignadas a esta asignatura también serán borradas)</string>
    <string name="startTime">Hora de inicio</string>
    <string name="endTime">Hora de finalización</string>
    <string name="weekDay">Día</string>
    <string name="firstTimeSubjects">false</string>
    <string name="howDeleteSubject">Para eliminar una asignatura mantenla pulsada durante unos segundos</string>

</resources>
