<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.marcelba.mystudyschedule.NewTask">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/TvNuevaTarea"
        android:id="@+id/TvNuevaTarea"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/EtNuevaTarea"
        android:layout_below="@+id/TvNuevaTarea"
        android:layout_alignLeft="@+id/TvNuevaTarea"
        android:layout_alignStart="@+id/TvNuevaTarea" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/TvAsignatura"
        android:id="@+id/TvAsignatura"
        android:layout_below="@+id/EtNuevaTarea"
        android:layout_alignLeft="@+id/EtNuevaTarea"
        android:layout_alignStart="@+id/EtNuevaTarea" />

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/SnAsignatura"
        android:layout_below="@+id/TvAsignatura"
        android:layout_alignLeft="@+id/TvAsignatura"
        android:layout_alignStart="@+id/TvAsignatura" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/TvFechaTarea"
        android:id="@+id/TvFechaTarea"
        android:layout_alignBottom="@+id/SnAsignatura"
        android:layout_alignLeft="@+id/SnAsignatura"
        android:layout_alignStart="@+id/SnAsignatura" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/EtFechaTarea"
        android:layout_below="@+id/SnAsignatura"
        android:layout_alignLeft="@+id/SnAsignatura"
        android:layout_alignStart="@+id/SnAsignatura" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/TvPrioridadTarea"
        android:id="@+id/TvPrioridadTarea"
        android:layout_below="@+id/EtFechaTarea"
        android:layout_alignLeft="@+id/EtFechaTarea"
        android:layout_alignStart="@+id/EtFechaTarea" />

    <RatingBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/RatingTarea"
        android:layout_below="@+id/TvPrioridadTarea"
        android:layout_alignLeft="@+id/TvPrioridadTarea"
        android:layout_alignStart="@+id/TvPrioridadTarea" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/TvDesTarea"
        android:id="@+id/TvDesTarea"
        android:layout_below="@+id/RatingTarea"
        android:layout_alignLeft="@+id/RatingTarea"
        android:layout_alignStart="@+id/RatingTarea" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textMultiLine"
        android:ems="10"
        android:id="@+id/EtDescTarea"
        android:layout_below="@+id/TvDesTarea"
        android:layout_alignLeft="@+id/TvDesTarea"
        android:layout_alignStart="@+id/TvDesTarea"
        android:lines="5" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/BtGuardar"
        android:id="@+id/BtGuardar"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:onClick="saveNewTask"/>

</RelativeLayout>
