<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context="com.example.marcelba.mystudyschedule.Settings"
    android:orientation="vertical"
    android:overScrollMode="ifContentScrolls"
    android:scrollbarStyle="insideOverlay"
    android:scrollbars="vertical"
    android:animateLayoutChanges="true">

   <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">
       <RelativeLayout
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:paddingLeft="@dimen/activity_horizontal_margin"
           android:paddingRight="@dimen/activity_horizontal_margin"
           android:paddingTop="@dimen/activity_vertical_margin"
           android:paddingBottom="@dimen/activity_vertical_margin">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/app_name"
        android:id="@+id/TvAppName"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/TvTeam"
        android:id="@+id/TvTeam"
        android:gravity="right"
        android:layout_below="@+id/TvAppName"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />


    <ImageView
        android:layout_width="@dimen/imgTeamFoto"
        android:layout_height="@dimen/imgTeamFoto"
        android:id="@+id/Foto01"
        android:background="@drawable/mar"
        android:layout_below="@+id/TvTeam"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/TvMember01"
        android:id="@+id/TvMember01"
        android:layout_below="@+id/Foto01"
        android:layout_alignLeft="@+id/TvMember02"
        android:layout_alignStart="@+id/TvMember02" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/TvMemberJob01"
        android:id="@+id/TvMemberJob01"
        android:layout_below="@+id/TvMember01"
        android:layout_centerHorizontal="true" />

    <ImageView
        android:layout_width="@dimen/imgTeamFoto"
        android:layout_height="@dimen/imgTeamFoto"
        android:id="@+id/imageView2"
        android:background="@drawable/rub"
        android:layout_below="@+id/TvMemberJob01"
        android:layout_alignLeft="@+id/Foto01"
        android:layout_alignStart="@+id/Foto01"
        android:layout_marginTop="26dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/TvMember02"
        android:id="@+id/TvMember02"
        android:layout_below="@+id/imageView2"
        android:layout_alignLeft="@+id/imageView2"
        android:layout_alignStart="@+id/imageView2" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/TvMemberJob01"
        android:id="@+id/TvMemberJob02"
        android:layout_below="@+id/TvMember02"
        android:layout_alignLeft="@+id/TvMemberJob01"
        android:layout_alignStart="@+id/TvMemberJob01" />
       </RelativeLayout>
   </ScrollView>
</RelativeLayout>
